# GestaltEngine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.ini  config.json  setup.py  setup_macos.py
engine/application/: CMakeLists.txt  Gui.cpp  Gui.hpp  InputSystem.cpp  PhysicEngine.cpp  PhysicEngine.hpp  PhysicUtil.hpp  Window.cpp
engine/application/ECS/: AnimationSystem.cpp  AnimationSystem.hpp  AudioSystem.cpp  AudioSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  ComponentFactory.cpp  ComponentFactory.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  LightSystem.cpp  MaterialSystem.cpp  MeshSystem.cpp  MeshSystem.hpp  PhysicSystem.cpp  RayTracingSystem.cpp  RayTracingSystem.hpp  TransformSystem.cpp
engine/application/Events/: EventBus.cpp  Events.cpp  Events.hpp
engine/application/Resource Loading/: AssetLoader.cpp  AssetLoader.hpp  GltfParser.cpp  MeshProcessor.cpp  MeshProcessor.hpp
engine/foundation/: CMakeLists.txt  FrameProvider.hpp  PerFrameData.hpp  RenderConfig.hpp  Repository.hpp  VmaImpl.cpp  VmaInclude.hpp  VulkanCheck.cpp  VulkanCheck.hpp  VulkanCore.hpp  VulkanTypes.hpp  common.hpp  vk_initializers.cpp  vk_initializers.hpp
engine/foundation/Animation/: AnimationChannel.hpp  InterpolationType.hpp
engine/foundation/Buffer/: LightBuffer.hpp  MaterialBuffer.hpp  MeshBuffer.hpp  PerFrameDataBuffer.hpp  RayTracingBuffer.hpp
engine/foundation/Components/: AnimationCameraComponent.hpp  AnimationComponent.hpp  Component.hpp  DirectionalLightComponent.hpp  FirstPersonCameraComponent.hpp  FreeFlyCameraComponent.hpp  MeshComponent.hpp  OrbitCameraComponent.hpp  OrthographicProjectionComponent.hpp  PerspectiveProjectionComponent.hpp  PhysicsComponent.hpp  PointLightComponent.hpp  SpotLightComponent.hpp  TransformComponent.hpp
engine/foundation/Descriptor/: DescriptorBinding.hpp  DescriptorUpdate.hpp
engine/foundation/Interface/: IGpu.hpp
engine/foundation/Material/: Material.hpp  PbrMaterial.hpp
engine/foundation/Mesh/: AABB.hpp  MeshSurface.hpp  MeshTaskCommand.hpp
engine/foundation/Resources/: AccelerationStructure.hpp  GpuProjViewData.hpp  GpuSpotLight.hpp  GpuVertexData.hpp  ResourceTypes.hpp  TextureType.hpp
engine/graphics/: CMakeLists.txt  Gpu.cpp  Gpu.hpp  ResourceAllocator.cpp  ResourceAllocator.hpp  TaskQueue.cpp  TaskQueue.hpp
engine/graphics/Render Engine/: FrameGraph.cpp  FrameGraph.hpp  RenderEngine.cpp  Swapchain.hpp
engine/graphics/Renderpasses/: MeshPasses.hpp  RenderPass.cpp  RenderPass.hpp  SkyBox.hpp  SsaoPasses.hpp  ToneMapping.hpp  VolumetricLight.hpp
engine/graphics/Utils/: CommandBuffer.hpp  CubemapUtil.cpp  CubemapUtils.hpp  Pipeline.cpp  Pipeline.hpp  PushDescriptor.hpp  ResourceBindings.hpp
source/: CMakeLists.txt
source/gestalt/: EntityRelations.puml  main.cpp
source/gestalt/application/: AnimationCamera.cpp  AnimationSystem.cpp  AssetLoader.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraSystem.cpp  ComponentFactory.cpp  EntityManager.cpp  EntityManager.hpp  FirstPersonCamera.cpp  FreeFlyCamera.cpp  Gui.cpp  Gui.hpp  InputSystem.cpp  InputSystem.hpp  LightSystem.cpp  MaterialSystem.cpp  MeshSystem.cpp  OrbitCamera.cpp  PhysicEngine.cpp  PhysicEngine.hpp  PhysicSystem.cpp  PhysicUtil.hpp  RenderingSystem.cpp  SceneManager.cpp  SceneManager.hpp  SceneSystem.cpp  SceneSystem.hpp  TmeTrackingService.hpp  TransformSystem.cpp  Window.cpp  Window.hpp
source/gestalt/application/Cameras/: AnimationCamera.cpp  AnimationCamera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  FreeFlyCamera.cpp  FreeFlyCamera.hpp  OrbitCamera.cpp  OrbitCamera.hpp
source/gestalt/application/ECS/: AnimationSystem.cpp  AnimationSystem.hpp  AudioSystem.cpp  AudioSystem.hpp  BaseSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  ComponentFactory.cpp  ComponentFactory.hpp  ECSManager.cpp  ECSManager.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  LightSystem.cpp  LightSystem.hpp  MaterialSystem.cpp  MaterialSystem.hpp  MeshSystem.cpp  MeshSystem.hpp  PhysicSystem.cpp  PhysicSystem.hpp  RayTracingSystem.cpp  RayTracingSystem.hpp  TransformSystem.cpp  TransformSystem.hpp
source/gestalt/application/Events/: EventBus.hpp  Events.hpp
source/gestalt/application/Resource Loading/: AssetLoader.cpp  AssetLoader.hpp  GltfParser.cpp  GltfParser.hpp  MeshProcessor.cpp  Vertex.hpp
source/gestalt/foundation/: AnimationCamera.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Components.hpp  EngineConfig.hpp  EngineConfiguration.cpp  EngineConfiguration.hpp  FirstPersonCamera.cpp  FrameProvider.hpp  FreeFlyCamera.cpp  GpuResources.hpp  GpuTypes.hpp  InputTypes.hpp  OrbitCamera.cpp  PerFrameData.hpp  RenderConfig.hpp  Repository.hpp  UserInput.hpp  ValidationCallback.hpp  VulkanCheck.hpp  VulkanTypes.cpp  VulkanTypes.hpp  common.hpp  descriptor.cpp  vk_types.hpp
source/gestalt/foundation/Animation/: AnimationChannel.hpp  AnimationComponent.hpp  Keyframe.hpp
source/gestalt/foundation/Buffer/: BufferCollection.hpp  LightBuffer.hpp  MaterialBuffer.hpp  MeshBuffer.hpp  PerFrameDataBuffer.hpp
source/gestalt/foundation/Camera/: AnimationCameraData.hpp  CameraPositionerType.hpp  CameraProjectionType.hpp  FirstPersonCameraData.hpp  FreeFlyCameraData.hpp  OrbitCameraData.hpp  OrthographicProjectionData.hpp  PerspectiveProjectionData.hpp
source/gestalt/foundation/Components/: AnimationComponent.hpp  CameraComponent.hpp  Entity.hpp  LightComponent.hpp  NodeComponent.hpp  (+2 more)
source/gestalt/graphics/: ApplicationGui.cpp  ApplicationGui.h  ApplicationWindow.cpp  ApplicationWindow.h  AssetLoader.cpp  BasicResourceLoader.cpp  BasicResourceLoader.hpp  CMakeLists.txt  Camera.hpp  Components.h  Components.hpp  CubemapUtil.cpp  CubemapUtils.h  DeletionService.h  Engine.cpp  Engine.hpp  FrameGraph.cpp  FrameGraph.h  FrameGraph.hpp  GameEngine.cpp  GameEngine.hpp  GeometryPass.cpp  GeometryPass.h  Gpu.cpp  Gpu.h  Gpu.hpp  GpuResources.h  GpuResources.hpp  Gui.cpp  Gui.h  Gui.hpp  HdrPass.cpp  HdrPass.h  InputSystem.cpp  InputSystem.h  InputSystem.hpp  LightingPass.cpp  LightingPass.h  RenderConfig.h  RenderConfig.hpp  (+124 more)
(+157 files in other folders)
